# mpc-recovery

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.multichain  README.md  flake.nix
.cargo/: config
.github/workflows/: build-and-test.yml  deploy-dev.yml  deploy-multichain-dev-contract.yml  deploy-prod.yml  docker-image.yml  integration.yml  integration_tests.yml  integrations.yml  multichain-contract.yml  multichain-dev.yml  multichain-integration.yml  multichain-prod.yml  terraform-dev.yml  terraform-feature-env.yml  terraform.yml  tests.yml  unit.yml
bollard/: Cargo.toml
bollard/src/: docker.rs
chain-signatures/: Cargo.toml
chain-signatures/contract/: Cargo.toml
chain-signatures/cross-contract/: Cargo.toml
chain-signatures/node/: Cargo.toml
common/: Cargo.toml
common/src/: leader.rs  lib.rs  sign.rs  types.rs
contract/: Cargo.toml
contract/src/: lib.rs  primitives.rs  tests.rs
contract/tests/: tests.rs
crypto-shared/: Cargo.toml
crypto-shared/src/: kdf.rs  lib.rs  types.rs
gcp/: Cargo.toml
hyper/: CHANGELOG.md
hyperlocal/: Cargo.toml
hyperlocal/src/: client.rs
infra/: README.md  main.tf  terraform-dev.tfvars  variables.tf
infra/mpc-recovery-dev/: main.tf  terraform-dev.tfvars  variables.tf
infra/mpc-recovery-prod/: main.tf  terraform-dev.tfvars  variables.tf
infra/mpc-recovery-testnet/: main.tf
infra/multichain-dev/: main.tf  variables.tf
infra/multichain-mainnet-dev/: main.tf  resources.tf  terraform-dev.tfvars  variables.tf
integration-tests/: Cargo.toml  README.md  secret_manager_dev-20240417212011-30013353286099  secret_manager_dev-20240417212011-69447388868657  secret_manager_dev-20240417212011-88966121249099  secret_manager_dev-20240417212556-49211806939957  secret_manager_dev-20240417212556-65204635993259  secret_manager_dev-20240417212556-67286833268094  secret_manager_dev-20240417212955-74442582640319  secret_manager_dev-20240417212955-77157671428297  secret_manager_dev-20240417212955-86075715048892  secret_manager_dev-20240417213520-24957596395286  secret_manager_dev-20240417213520-31411208268936  secret_manager_dev-20240417213520-56358326999967  secret_manager_dev-20240417214218-29617079305924  secret_manager_dev-20240417214218-30319050334849  secret_manager_dev-20240417214218-84545859260855  secret_manager_dev-20240417215601-27443113196797  secret_manager_dev-20240417215601-60121243629461  secret_manager_dev-20240417215601-92160424445555
keys/: Cargo.toml
keys/src/: hpke.rs  lib.rs
leader-node/: Cargo.toml
leader-node/src/: client.rs  lib.rs  main.rs
leader-node/src/web/: error.rs  mod.rs
load-tests/: Cargo.toml  README.md
mpc-recovery/: Cargo.toml
node/: Cargo.toml
sign-node/: Cargo.toml
tokio/: Cargo.toml
(+188 files in other folders)
