[package]
name = "mpc-recovery-common"
version = "0.1.0"
edition = "2021"

[dependencies]
cait-sith = { version = "0.7", features = ["k256"] }
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.4.0", features = ["serde"] }
