[package]
name = "mpc-keys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hpke = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
hex = "*"

[features]
default = ["hpke", "rand", "serde"]
wasm = []
