[package]
name = "leader-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leader-node"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.6.19" }
axum-client-ip = "0.4.1"
axum-extra = "0.7"
clap = { version = "4.2", features = ["derive", "env"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }

mpc-recovery-common = { path = "../common" }
